--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "type": "module",
   "workspaces": [
     "src/project_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/identity": "^2.4.0"
+  }
 }
